--- a/main.css
+++ b/main.css
@@ -8,7 +8,19 @@ body.signin-body {
 .card.signin-card {
     padding: 40px 0px 20px;
     background-color: #ffffff;
+    margin: auto;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
     -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
     -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+}
+
+img.signin-img {
+    padding: 0 2rem 2rem;
+    margin: auto;
+    display: block;
+}
+
+form.signin-form {
+    max-width: 350px;
+    margin: auto;
 }
