--- a/main.css
+++ b/main.css
@@ -24,3 +24,19 @@ form.signin-form {
     max-width: 350px;
     margin: auto;
 }
+
+button.signin-btn {
+    color: #ffffff;
+    background-color: #00206c;
+    width: 100%;
+    margin-bottom: 1.2rem; 
+}
+
+a.create-new-account {
+    font-size: 1.2rem;
+    text-align: center;
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 2rem;
+    color: #ffffff;
+}
